# swoop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
examples/: bounded.rs
src/: lib.rs
src/minimise/: mod.rs  nelder_mead.rs
src/minimise_multivariate/: mod.rs
src/minimise_scalar/: bounded.rs  brent.rs  golden.rs  mod.rs
